docs/6.5.1/GXLS.md
<p>描述主要和重要更新内容。</p>
<span class="anchor" id="f1c67f81-3d4c-4236-879c-a6c9326fb70d"></span>
## 1.版本
<p><strong>v2020.12.24</strong></p>
<span class="anchor" id="abf25cec-5f9e-45f3-bb6e-d6a4fb5217a6"></span>
## 2.更新历史
<ul>
<li><p>2021/1/25</p>
<ol>
<li><p>新增页面6.5.1版本更新说明补充说明</p></li>
<li><p>对ReqQryClassifiedInstrument、ReqQryCombPromotionParam添加说明</p></li>
</ol></li>
<li><p>2021/1/6</p>
<ol>
<li>修正6.5.1版本更新说明中运行环境说明，windows支持32位和64位。</li>
</ol></li>
<li><p>2020/12/24</p>
<ol>
<li><p>添加brokerid在认证中是必填字段</p></li>
<li><p>6.5.1中ipv6说明RegisterFens-&gt;RegisterNmaeServer修订</p></li>
<li><p>主页添加线程数说明</p></li>
</ol></li>
<li><p>2020/12/10</p>
<ol>
<li><p>调整Tas手续费和保证金说明</p></li>
<li><p>修改OnRtnBulletin说明属于公有流</p></li>
<li><p>修改OnRtnInstrumentStatus问答</p></li>
<li><p>调整ReqQryInstrument中FAQ说明</p></li>
<li><p>调整ReqQueryMaxOrderVolume名称为ReqQryMaxOrderVolume</p></li>
<li><p>增加OnFrontDisconnected说明</p></li>
<li><p>“做市商询价和报价”页面对于是否会撤销前一次报价说明增加七期说明</p></li>
<li><p>大商所组保合约名称修改BUL-&gt;BLS   BER-&gt;BES</p></li>
<li><p>主页增加字符集说明</p></li>
<li><p>增加Ref字段需要递增说明</p></li>
<li><p>对于银期转账中TradeCode说明修改。</p></li>
<li><p>SubscribePublicTopic增加一种私有流方式</p></li>
<li><p>“大商所组保”增加FAQ说明</p></li>
</ol></li>
<li><p>2020/11/6</p>
<ol>
<li><p>增加各个接口对ipv6的说明</p></li>
<li><p>修订RegisterUserSystemInfo、SubmitUserSystemInfo接口字段说明</p></li>
</ol></li>
<li><p>2020/10/21</p>
<ol>
<li><p>更新6.5.1apichm说明</p></li>
<li><p>新增6.5.1api版本说明</p></li>
<li><p>新增两个接口ReqQryClassifiedInstrument、ReqQryCombPromotionParam对应的回调OnRspQryClassifiedInstrument、OnRspQryCombPromotionParam</p></li>
<li><p>ReqQueryMaxOrderVolume接口修改为ReqQryMaxOrderVolume，对应的回调OnRspQueryMaxOrderVolume修改为OnRspQryMaxOrderVolume</p></li>
</ol></li>
<li><p>2020/04/29</p>
<ol>
<li><p>更新到6.3.19 api说明，更新对应新增字段。</p></li>
<li><p>新增tas介绍</p></li>
<li><p>新增fens介绍</p></li>
<li><p>更正代码示例错误，Release()前使用RegisterSpi(NULL)，这个代码是错误的，会导致api概率崩溃。</p></li>
<li><p>新增ReqUserLogout、ReqAuthenticate、增加流控参数部分说明、郑商所行情说明。</p></li>
</ol></li>
<li><p>2020/03/13</p>
<ol>
<li>新增init/release线程安全说明</li>
</ol></li>
<li><p>2020/03/06</p>
<ol>
<li>修正logout之后是否会触发重连机制</li>
</ol></li>
<li><p>2020/02/21</p>
<ol>
<li><p>新添加通讯模式中基本接口所属的数据流</p></li>
<li><p>完善做市商接受询价的说明</p></li>
<li><p>修改对于撤单接口就上期所新增挂单激活操作在本系统是否支持说明</p></li>
<li><p>新增条件单说明</p></li>
<li><p>新增各个交易所盘中行情合约状态推送的具体状态</p></li>
</ol></li>
<li><p>2019/11/28</p>
<ol>
<li><p>新增做市商询价和报价指令介绍</p></li>
<li><p>修正SubscribeForQuoteRsp中FAQ回答错误。普通投资者只能订阅上期所和中金所询价通知 改为 普通投资者能订阅四所的询价通知。</p></li>
</ol></li>
<li><p>2019/07/12</p>
<ol>
<li>新增报单回调规则、报价回调规则</li>
</ol></li>
<li><p>2019/07/03</p>
<ol>
<li>新增相关穿透式的一些问题回答</li>
</ol></li>
<li><p>2019/06/27</p>
<ol>
<li><p>新增大商所组保业务说明</p></li>
<li><p>修正OnRspQryInvestorPosition和OnRspQryInvestorPositionDetail里缺失TimeFirstVolume和PositionCostOffset字段的问题</p></li>
</ol></li>
<li><p>2019/06/05</p>
<ol>
<li>新增CTP流控说明</li>
</ol></li>
<li><p>2019/05/27</p>
<ol>
<li><p>新增交易接口和行情接口代码示例说明。</p></li>
<li><p>新增阅读指引，方便用户快速上手chm文档。</p></li>
</ol></li>
<li><p>2019/04/29</p>
<ol>
<li>新增看穿式监管数据采集的常见FAQ。</li>
</ol></li>
<li><p>2019/4/11</p>
<ol>
<li>新增二代行情API接口说明，该API新增接口QryMulticastInstrument。</li>
</ol></li>
<li><p>2019/3/14</p>
<ol>
<li><p>增加看穿式监管相关API接口的返回值。</p></li>
<li><p>主页新增版本兼容性说明，务必了解！</p></li>
</ol></li>
<li><p>2019/3/14</p>
<ol>
<li>增加有关看穿式监管相关问题接单。</li>
</ol></li>
</ul>
